--- a/Info/Arduino.html
+++ b/Info/Arduino.html
@@ -25,15 +25,68 @@
     <main>
         <section>
             <h1>Todo sobre Arduino</h1>
+            <p>Arduino tiene sus raíces en el año 2005,
+                cuando un grupo de estudiantes del Instituto Ivrea en Italia se propuso crear una plataforma de
+                prototipado de hardware de código abierto.
+                Los fundadores de este proyecto, Massimo Banzi, David Cuartielles, Tom Igoe, Gianluca Martino y David
+                Mellis, buscaban una manera de democratizar la electrónica y la programación, haciéndolas accesibles
+                para una amplia gama de personas,
+                desde estudiantes hasta artistas y aficionados.
+                El nombre "Arduino" proviene de un bar en Ivrea, Italia,
+                donde los fundadores del proyecto solían reunirse para discutir y planificar sus ideas.
+                La primera placa de Arduino, conocida como "Arduino 001", se basaba en un microcontrolador Atmel AVR y
+                fue lanzada en 2005.
+                Desde entonces, Arduino ha experimentado un crecimiento y desarrollo continuos.
+                Se han lanzado varias versiones de hardware y software, incluyendo diferentes modelos
+                de placas y actualizaciones del entorno de desarrollo integrado (IDE) de Arduino.
+            </p>
+            <p>
+                Habilidades de Arduino:
+            </p>
+            <ul>
+                <li><strong>Conocimiento del Ecosistema de Arduino:</strong> El ecosistema de Arduino comprende una
+                    variedad de herramientas y recursos esenciales para el desarrollo de proyectos electrónicos.
+                    Familiarizarse con el IDE de Arduino, las bibliotecas de código abierto y los componentes
+                    disponibles es fundamental para trabajar eficazmente con Arduino.</li>
+                <li><strong>Conceptos de Electrónica Básica:</strong> Para trabajar con Arduino, es importante tener una
+                    comprensión básica de la electrónica, incluyendo conceptos como voltaje, corriente, resistencia y
+                    circuitos eléctricos. Esto permite diseñar y conectar circuitos con sensores, actuadores y otros
+                    componentes electrónicos.</li>
+                <li><strong>Programación en Arduino:</strong> La programación en Arduino se realiza utilizando un
+                    lenguaje basado en C/C++. Es esencial tener conocimientos básicos de programación para escribir y
+                    comprender el código Arduino, incluyendo la estructura de control, variables, funciones y
+                    bibliotecas.</li>
+                <li><strong>Manejo de Sensores y Actuadores:</strong> Trabajar con Arduino implica interactuar con una
+                    variedad de sensores y actuadores para recopilar datos del entorno y controlar dispositivos físicos.
+                    Es importante tener experiencia en el uso de sensores como temperatura, luz, movimiento, así como
+                    motores, servos y otros actuadores.</li>
+                <li><strong>Resolución de Problemas:</strong> La capacidad para identificar y solucionar problemas es
+                    fundamental al trabajar con Arduino. Esto incluye el diagnóstico de problemas de hardware y
+                    software, así como la depuración y corrección de errores en el código Arduino.</li>
+                <li><strong>Creatividad y Pensamiento Innovador:</strong> Arduino ofrece infinitas posibilidades para la
+                    creación de proyectos creativos e innovadores. La capacidad para pensar de forma creativa y
+                    encontrar soluciones únicas a los problemas es una habilidad invaluable al trabajar con Arduino.
+                </li>
+            </ul>
             <img src="../Imagenes/arduino.png" alt="">
             <!--Listado de los proyectos para subir-->
             <section id="servicios-Arduino">
                 <h2>Servicios de Programación en Arduino</h2>
+                <p>En Infinite Soft, estamos especializados en el desarrollo de soluciones de software robustas y
+                    escalables utilizando Arduino.</p>
 
-
-                <h3>¿Qué podemos hacer por ti?</h3>
+                <h3>Enlace de prueba</h3>
                 <ul>
-
+                    <li><strong>Desarrollo de Proyectos Electrónicos:</strong> Creamos proyectos electrónicos
+                        personalizados utilizando la plataforma Arduino. Desde sistemas de monitoreo ambiental hasta
+                        dispositivos de control automatizado, estamos listos para abordar tus desafíos.</li>
+                    <li><strong>Automatización y Domótica:</strong> Desarrollamos soluciones de automatización para el
+                        hogar y la industria utilizando Arduino. Desde sistemas de control de iluminación hasta gestión
+                        energética, podemos ayudarte a hacer tu vida más fácil.</li>
+                    <li><strong>IOT (Internet de las cosas) y Sensores:</strong> Nuestro equipo está capacitado para
+                        crear aplicaciones de Internet de las cosas (IoT) y sistemas de monitorización utilizando
+                        Arduino y una variedad de sensores. Desde dispositivos de seguimiento hasta sistemas de alerta
+                        temprana, podemos ayudarte a conectar el mundo físico con el digital.</li>
                 </ul>
             </section>
             <section>
