--- a/Info/c.html
+++ b/Info/c.html
@@ -25,24 +25,87 @@
     <main>
         <section>
             <h1>Todo sobre C#</h1>
-            <img src="../Imagenes/C.png" alt="">
-            <!--Listado de los proyectos para subir-->
-            <section id="servicios-C#">
-                <h2>Servicios de Programación en C#</h2>
+            <p>C# (pronunciado "C Sharp") es un lenguaje de programación desarrollado por Microsoft Corporation en el
+                año 2000 como parte de su plataforma .NET. Fue diseñado por Anders Hejlsberg, líder del equipo de
+                desarrollo de C# en Microsoft.</p>
+            <p>El desarrollo de C# fue una respuesta de Microsoft a la creciente popularidad de Java de Sun
+                Microsystems. Java había demostrado ser un lenguaje potente y versátil para el desarrollo de software,
+                especialmente para aplicaciones distribuidas y web.</p>
+            <p>C# fue concebido como un lenguaje moderno y orientado a objetos, diseñado para ser simple, seguro,
+                robusto y altamente escalable. Se basa en los principios de C++ y Java, adoptando muchas de las
+                características de ambos lenguajes, pero con algunas mejoras y simplificaciones significativas.</p>
+            <p>La primera versión pública de C#, conocida como C# 1.0, fue lanzada en el año 2002 como parte de Visual
+                Studio .NET. Desde entonces, C# ha experimentado varias actualizaciones y mejoras, con nuevas versiones
+                introduciendo características adicionales y mejoras de rendimiento.</p>
+            <p>C# se ha convertido en uno de los lenguajes de programación más populares del mundo, utilizado en una
+                amplia variedad de aplicaciones, desde desarrollo de software empresarial hasta desarrollo de juegos y
+                aplicaciones móviles. Es el lenguaje principal para el desarrollo de aplicaciones en la plataforma .NET
+                de Microsoft, que incluye tecnologías como ASP.NET para desarrollo web, WPF para desarrollo de
+                aplicaciones de escritorio y Xamarin para desarrollo de aplicaciones móviles multiplataforma.</p>
+            <p>La comunidad de desarrolladores de C# es activa y próspera, con una amplia gama de recursos disponibles,
+                incluyendo bibliotecas de código abierto, herramientas de desarrollo y tutoriales en línea.</p>
+            <p>En resumen, C# ha evolucionado para convertirse en un lenguaje de programación ampliamente utilizado y
+                apreciado, respaldado por una sólida infraestructura de desarrollo y una comunidad activa de
+                desarrolladores.</p>
+        </section>
+        <p>
+            Habilidades de C#:
+        </p>
+        <section>
+            <ul>
+                <li><strong>Conocimiento del Lenguaje:</strong> Dominar los fundamentos del lenguaje C#, incluyendo
+                    sintaxis, tipos de datos, operadores y estructuras de control.</li>
+                <li><strong>Programación Orientada a Objetos (POO):</strong> Comprender los principios de la
+                    programación orientada a objetos, como encapsulamiento, herencia, polimorfismo y abstracción, y
+                    saber aplicarlos en el desarrollo de software con C#.</li>
+                <li><strong>Desarrollo de Aplicaciones Windows:</strong> Capacidad para crear aplicaciones de escritorio
+                    para el sistema operativo Windows utilizando tecnologías como Windows Forms o WPF (Windows
+                    Presentation Foundation).</li>
+                <li><strong>Desarrollo Web con ASP.NET:</strong> Familiaridad con el framework ASP.NET para el
+                    desarrollo de aplicaciones web utilizando lenguajes como C# y herramientas como MVC
+                    (Model-View-Controller) o Razor Pages.</li>
+                <li><strong>Acceso a Datos con ADO.NET y Entity Framework:</strong> Conocimientos en el acceso a bases
+                    de datos relacionales utilizando tecnologías como ADO.NET para consultas SQL directas o Entity
+                    Framework para el mapeo objeto-relacional.</li>
+                <li><strong>Resolución de Problemas:</strong> Habilidad para identificar y solucionar problemas de
+                    programación de manera eficiente, utilizando técnicas de depuración y análisis de código para
+                    encontrar y corregir errores.</li>
+            </ul>
+        </section>
+        <img src="../Imagenes/C.png" alt="">
+        <!--Listado de los proyectos para subir-->
+        <section id="servicios-C#">
+            <h2>Servicios de Programación en C#</h2>
+            <ul>
+                <li><strong>Desarrollo de Aplicaciones Windows:</strong> Creamos aplicaciones de escritorio para el
+                    sistema operativo Windows utilizando tecnologías como Windows Forms (WinForms) o Windows
+                    Presentation Foundation (WPF). Desde herramientas empresariales hasta aplicaciones de consumidor,
+                    estamos listos para cumplir con tus requisitos.</li>
+                <li><strong>Desarrollo Web con ASP.NET:</strong> Desarrollamos aplicaciones web dinámicas y escalables
+                    utilizando ASP.NET y ASP.NET Core. Desde sitios web corporativos hasta sistemas de gestión de
+                    contenido, podemos ayudarte a alcanzar tus objetivos en línea.</li>
+                <li><strong>Conexión a Bases de Datos:</strong> Implementamos soluciones robustas de acceso a datos
+                    utilizando ADO.NET y Entity Framework. Desde pequeñas bases de datos locales hasta entornos
+                    empresariales complejos, podemos ayudarte a gestionar y acceder a tus datos de manera eficiente.
+                </li>
+                <li><strong>Desarrollo de APIs y Servicios:</strong> Creamos servicios web y APIs utilizando tecnologías
+                    como ASP.NET Web API y gRPC. Conectamos tus aplicaciones y sistemas para una comunicación fluida y
+                    una integración sin problemas.</li>
+                <li><strong>Desarrollo de Juegos con Unity:</strong> Utilizamos C# en el desarrollo de juegos
+                    multiplataforma con Unity. Desde juegos indie hasta proyectos AAA, podemos convertir tus ideas en
+                    experiencias de juego emocionantes.</li>
+            </ul>
 
+            <h3>Enlace de prueba</h3>
 
-                <h3>¿Qué podemos hacer por ti?</h3>
-                <ul>
-
-                </ul>
-            </section>
-            <section>
-                <h1>link de descarga</h1>
-                <!-- Poner los links de los proyectos con el comando URL -->
-                <!-- <li>Humerdad <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
+        </section>
+        <section>
+            <h1>link de descarga</h1>
+            <!-- Poner los links de los proyectos con el comando URL -->
+            <!-- <li>Humerdad <a href=""><a href="../Proyectos de arduino/BT_Hum_Tem/BT_HUM_TEM/BT_HUM_TEM.ino"
                             download>Descargar sobre humedad</a></a></li> -->
 
-            </section>
+        </section>
     </main>
 
     </section>
