--- a/Info/cmas.html
+++ b/Info/cmas.html
@@ -25,13 +25,83 @@
     <main>
         <section>
             <h1>Todo sobre C++</h1>
+            <section>
+                <p>C++ es un lenguaje de programación diseñado por Bjarne Stroustrup en los laboratorios Bell a
+                    principios de los años 80. Fue desarrollado como una extensión del lenguaje de programación C, con
+                    el objetivo de agregarle características de programación orientada a objetos (OOP).</p>
+                <p>El nombre "C++" se refiere a la evolución del lenguaje C, ya que el operador "++" en C es el operador
+                    de incremento. Esto simboliza el incremento y mejora de las capacidades de programación que C++
+                    proporciona sobre el lenguaje C.</p>
+                <p>La primera versión oficial de C++, conocida como "C++98" o "ISO/IEC 14882:1998", fue estandarizada
+                    por la Organización Internacional de Normalización (ISO) en 1998. Desde entonces, ha habido varias
+                    revisiones y actualizaciones del estándar, incluyendo C++11, C++14, C++17 y C++20, que han
+                    introducido nuevas características y mejoras al lenguaje.</p>
+                <p>C++ ha sido ampliamente utilizado en una variedad de aplicaciones, desde el desarrollo de sistemas
+                    operativos y compiladores hasta aplicaciones de software de alto rendimiento, juegos, sistemas
+                    embebidos, y mucho más. Es conocido por su eficiencia, flexibilidad y capacidad de bajo nivel, lo
+                    que lo hace adecuado para una amplia gama de aplicaciones.</p>
+                <p>Hoy en día, C++ sigue siendo uno de los lenguajes de programación más populares y ampliamente
+                    utilizados en el mundo, y sigue siendo un área activa de investigación y desarrollo en la
+                    informática.</p>
+            </section>
+
+            <section>
+                <h2>Habilidades en C++</h2>
+                <ul>
+                    <li><strong>Programación Orientada a Objetos (OOP):</strong> C++ es un lenguaje de programación
+                        orientado a objetos, por lo que es importante tener un buen entendimiento de los conceptos de
+                        OOP, como clases, objetos, herencia, polimorfismo y encapsulamiento.</li>
+                    <li><strong>Gestión de Memoria:</strong> C++ permite un control de memoria más directo que otros
+                        lenguajes de programación de más alto nivel, por lo que es importante entender cómo gestionar la
+                        memoria de manera eficiente para evitar problemas como fugas de memoria y errores de acceso.
+                    </li>
+                    <li><strong>Conocimiento de la Biblioteca Estándar de C++ (STL):</strong> La Biblioteca Estándar de
+                        C++ proporciona una amplia gama de estructuras de datos y algoritmos listos para usar. Es
+                        fundamental familiarizarse con las clases y funciones de la STL para aprovechar al máximo el
+                        potencial de C++.</li>
+                    <li><strong>Uso avanzado de punteros:</strong> C++ ofrece la capacidad de trabajar directamente con
+                        punteros, lo que permite un control detallado sobre la memoria y una mayor flexibilidad en el
+                        manejo de datos. Es importante entender cómo usar punteros de manera segura y eficiente.</li>
+                    <li><strong>Conocimientos de Programación de Bajo Nivel:</strong> C++ proporciona acceso directo al
+                        hardware de la computadora y permite escribir código de bajo nivel para optimizar el
+                        rendimiento. Es útil tener conocimientos de programación de bajo nivel para optimizar algoritmos
+                        y resolver problemas de rendimiento.</li>
+                    <li><strong>Experiencia en Desarrollo de Software:</strong> Además de las habilidades técnicas
+                        específicas de C++, es importante tener experiencia en el desarrollo de software en general,
+                        incluyendo el diseño de software, la depuración, la optimización y la colaboración en equipo.
+                    </li>
+                </ul>
+            </section>
             <img src="../Imagenes/cmas.png" alt="">
             <!--Listado de los proyectos para subir-->
             <section id="servicios-C++">
                 <h2>Servicios de Programación en C++</h2>
+                <ul>
+                    <li><strong>Desarrollo de Aplicaciones de Software:</strong> Desarrollamos aplicaciones de software
+                        a medida utilizando C++. Ya sea que necesites una aplicación de escritorio, una aplicación de
+                        consola o un software embebido, nuestro equipo puede crear soluciones personalizadas según tus
+                        requisitos.</li>
+                    <li><strong>Optimización de Código:</strong> Optimizamos el rendimiento de tus aplicaciones
+                        existentes en C++, identificando cuellos de botella y áreas de mejora en el código. Nuestro
+                        objetivo es mejorar la eficiencia y la velocidad de tus aplicaciones sin comprometer la calidad
+                        del software.</li>
+                    <li><strong>Portabilidad y Migración:</strong> Ayudamos a migrar tu código existente a la última
+                        versión de C++ o a plataformas específicas. También optimizamos el código para mejorar la
+                        portabilidad entre diferentes sistemas operativos y arquitecturas de hardware.</li>
+                    <li><strong>Desarrollo de Juegos:</strong> Creamos juegos profesionales utilizando C++ y motores de
+                        juego como Unreal Engine y Unity. Desde juegos móviles hasta juegos de consola y PC, nuestro
+                        equipo puede llevar tus ideas de juego desde el concepto hasta la realidad.</li>
+                    <li><strong>Desarrollo de Sistemas Embebidos:</strong> Diseñamos y desarrollamos sistemas embebidos
+                        y aplicaciones de tiempo real utilizando C++. Desde dispositivos IoT hasta sistemas críticos de
+                        control, tenemos experiencia en crear soluciones robustas y eficientes para una amplia gama de
+                        aplicaciones embebidas.</li>
+                    <li><strong>Desarrollo de Bibliotecas y Herramientas:</strong> Creamos bibliotecas y herramientas
+                        reutilizables en C++ para facilitar el desarrollo de software. Desde bibliotecas de gráficos y
+                        matemáticas hasta herramientas de análisis y depuración, nuestro equipo puede proporcionar
+                        soluciones que aceleren el proceso de desarrollo.</li>
+                </ul>
 
-
-                <h3>¿Qué podemos hacer por ti?</h3>
+                <h3>Enlace de prueba</h3>
                 <ul>
 
                 </ul>
