--- a/Info/mysql.html
+++ b/Info/mysql.html
@@ -25,13 +25,40 @@
     <main>
         <section>
             <h1>Todo sobre MySQL</h1>
+            <section>
+                <p>MySQL es un sistema de gestión de bases de datos relacional de código abierto que ha ganado popularidad significativa desde su lanzamiento en la década de 1990.</p>
+                <p>La historia de MySQL se remonta a 1994, cuando los desarrolladores suecos Michael Widenius y David Axmark, junto con el finlandés Allan Larsson, crearon un sistema de gestión de bases de datos ligero y rápido llamado "MySQL" (My Sequel). Su objetivo era crear una alternativa de código abierto y de bajo costo a los sistemas de bases de datos comerciales disponibles en ese momento.</p>
+                <p>MySQL fue lanzado por primera vez al público en mayo de 1995 y rápidamente ganó popularidad debido a su simplicidad, velocidad y confiabilidad. A medida que crecía su base de usuarios, MySQL se convirtió en un componente crucial de la pila LAMP (Linux, Apache, MySQL, PHP/Python/Perl), que se convirtió en la plataforma preferida para el desarrollo web durante la explosión de Internet en la década de 2000.</p>
+                <p>En 2008, MySQL fue adquirido por Sun Microsystems, y posteriormente por Oracle Corporation en 2010 cuando Oracle compró Sun. A pesar de estos cambios de propiedad, MySQL ha mantenido su estatus como una de las bases de datos más populares del mundo, con una amplia comunidad de usuarios y contribuidores de código abierto.</p>
+                <p>Hoy en día, MySQL se utiliza en una amplia variedad de aplicaciones, desde pequeños sitios web hasta grandes empresas y aplicaciones empresariales. Su versatilidad, rendimiento y robustez lo convierten en una opción popular para almacenar y gestionar datos en todo tipo de entornos.</p>
+            </section>
+
+            <h2>Habilidades de MySQL</h2>
+            <ul>
+                <li><strong>SQL (Structured Query Language):</strong> Conocimiento profundo de SQL es fundamental para trabajar con MySQL. Debes entender cómo escribir consultas SQL para recuperar, insertar, actualizar y eliminar datos en la base de datos.</li>
+                <li><strong>Diseño de Base de Datos:</strong> Habilidad para diseñar esquemas de base de datos eficientes y escalables, incluyendo la definición de tablas, relaciones entre tablas, índices y restricciones de integridad.</li>
+                <li><strong>Optimización de Consultas:</strong> Capacidad para optimizar consultas SQL para mejorar el rendimiento de la base de datos, utilizando técnicas como el uso de índices, optimización de joins y análisis del plan de ejecución de consultas.</li>
+                <li><strong>Administración de Bases de Datos:</strong> Experiencia en la instalación, configuración y mantenimiento de servidores MySQL, incluyendo la gestión de usuarios, privilegios de acceso, copias de seguridad y recuperación de datos.</li>
+                <li><strong>Seguridad de la Base de Datos:</strong> Conocimiento de las mejores prácticas de seguridad de bases de datos, incluyendo la protección contra ataques de inyección SQL, el cifrado de datos sensibles y la gestión de accesos.</li>
+                <li><strong>Replicación y Alta Disponibilidad:</strong> Familiaridad con técnicas de replicación y configuración de clústeres para garantizar la disponibilidad y la redundancia de los datos en entornos de alta disponibilidad.</li>
+                <li><strong>Integración y Desarrollo de Aplicaciones:</strong> Habilidad para integrar MySQL con aplicaciones de software mediante el uso de API, lenguajes de programación y frameworks de desarrollo.</li>
+            </ul>
+        </section>
             <img src="../Imagenes/mysql.png" alt="">
             <!--Listado de los proyectos para subir-->
             <section id="servicios-MySQL">
                 <h2>Servicios de Programación en MySQL</h2>
-
-
-                <h3>¿Qué podemos hacer por ti?</h3>
+                <ul>
+                    <li><strong>Desarrollo de Bases de Datos:</strong> Creamos y diseñamos bases de datos eficientes y escalables utilizando MySQL, adaptadas a las necesidades específicas de tu proyecto.</li>
+                    <li><strong>Optimización de Consultas:</strong> Mejoramos el rendimiento de tus consultas SQL mediante la optimización y el ajuste de índices, estructuras de tablas y técnicas de acceso a datos.</li>
+                    <li><strong>Administración y Mantenimiento:</strong> Proporcionamos servicios de administración de bases de datos MySQL, incluyendo instalación, configuración, copias de seguridad regulares, monitoreo y resolución de problemas.</li>
+                    <li><strong>Integración con Aplicaciones:</strong> Integración de bases de datos MySQL con aplicaciones de software existentes o nuevas, asegurando una comunicación eficiente y segura entre la aplicación y la base de datos.</li>
+                    <li><strong>Seguridad y Cumplimiento:</strong> Implementamos medidas de seguridad robustas en tu base de datos MySQL para proteger tus datos sensibles contra amenazas de seguridad y garantizar el cumplimiento de regulaciones de privacidad y protección de datos.</li>
+                    <li><strong>Migración y Actualización:</strong> Ayudamos en la migración de bases de datos existentes a MySQL o en la actualización de versiones para aprovechar las últimas características y mejoras de rendimiento.</li>
+                    <li><strong>Desarrollo de Aplicaciones Web:</strong> Creamos aplicaciones web dinámicas y escalables que utilizan MySQL como backend de base de datos, garantizando un rendimiento óptimo y una gestión eficiente de los datos.</li>
+                    <li><strong>Soporte Técnico:</strong> Ofrecemos servicios de soporte técnico continuo para resolver problemas, proporcionar asistencia y garantizar el funcionamiento sin problemas de tus bases de datos MySQL.</li>
+                </ul>
+                <h3>Enlace de prueba</h3>
                 <ul>
 
                 </ul>
