--- a/Info/sql.html
+++ b/Info/sql.html
@@ -25,13 +25,37 @@
     <main>
         <section>
             <h1>Todo sobre SQL</h1>
+            <section>
+                <p>SQL (Structured Query Language) es un lenguaje de programación utilizado para gestionar bases de datos relacionales. Su historia se remonta a la década de 1970, cuando IBM desarrolló el modelo relacional para gestionar grandes volúmenes de datos de manera eficiente.</p>
+                <p>En 1974, Donald D. Chamberlin y Raymond F. Boyce, dos investigadores de IBM, desarrollaron un lenguaje de consulta para trabajar con bases de datos relacionales. Este lenguaje se llamó SEQUEL (Structured English Query Language), que más tarde se renombró a SQL debido a problemas de marca registrada.</p>
+                <p>SQL se convirtió en un estándar ANSI en 1986 y posteriormente en un estándar ISO en 1987. A lo largo de los años, SQL ha evolucionado y se ha ampliado con nuevas características y funcionalidades, convirtiéndose en el lenguaje estándar para interactuar con bases de datos relacionales en todo el mundo.</p>
+                <p>Hoy en día, SQL es ampliamente utilizado por desarrolladores de software, administradores de bases de datos y analistas de datos para realizar consultas, manipular datos, definir esquemas de bases de datos y administrar sistemas de gestión de bases de datos relacionales como MySQL, PostgreSQL, SQL Server y Oracle.</p>
+                <p>La continua evolución de SQL ha llevado al desarrollo de variantes y extensiones del lenguaje, como T-SQL (Transact-SQL) de Microsoft SQL Server, PL/SQL de Oracle y PL/pgSQL de PostgreSQL, que agregan características específicas del proveedor y capacidades avanzadas de programación.</p>
+            </section>
+            <h2>Habilidades importantes en SQL</h2>
+            <ul>
+                <li><strong>Conocimiento Profundo de SQL:</strong> Dominar los fundamentos y las características avanzadas del lenguaje SQL, incluyendo consultas SELECT, DML (Data Manipulation Language), DDL (Data Definition Language), DCL (Data Control Language) y TCL (Transaction Control Language).</li>
+                <li><strong>Modelado de Datos:</strong> Habilidad para diseñar y modelar bases de datos relacionales utilizando técnicas como el modelado entidad-relación (ER) y la normalización para garantizar la integridad y la eficiencia de los datos.</li>
+                <li><strong>Optimización de Consultas:</strong> Capacidad para analizar y optimizar consultas SQL para mejorar el rendimiento de las consultas y minimizar el tiempo de respuesta de la base de datos.</li>
+                <li><strong>Administración de Bases de Datos:</strong> Experiencia en la instalación, configuración y administración de sistemas de gestión de bases de datos relacionales, incluyendo tareas como la configuración de usuarios, copias de seguridad, restauraciones y monitoreo de rendimiento.</li>
+                <li><strong>Seguridad de Datos:</strong> Conocimiento de las mejores prácticas de seguridad de datos para proteger la confidencialidad, integridad y disponibilidad de la información almacenada en la base de datos, incluyendo la implementación de políticas de acceso y auditorías de seguridad.</li>
+                <li><strong>Integración de Datos:</strong> Habilidad para integrar y migrar datos entre diferentes sistemas y plataformas utilizando herramientas de ETL (Extract, Transform, Load) y técnicas de integración de datos como la replicación y la federación de datos.</li>
+                <li><strong>Análisis de Datos:</strong> Capacidad para realizar análisis y reporting de datos utilizando funciones analíticas y herramientas de business intelligence (BI) para extraer información significativa y tomar decisiones basadas en datos.</li>
+            </ul>
             <img src="../Imagenes/sql.png" alt="">
             <!--Listado de los proyectos para subir-->
             <section id="servicios-SQL">
                 <h2>Servicios de Programación en SQL</h2>
+                <ul>
+                    <li><strong>Desarrollo de Consultas SQL:</strong> Creamos y optimizamos consultas SQL eficientes para recuperar, manipular y analizar datos de bases de datos relacionales.</li>
+                    <li><strong>Diseño y Modelado de Bases de Datos:</strong> Diseñamos esquemas de bases de datos relacionales utilizando técnicas de modelado de datos para garantizar la integridad y eficiencia de los datos.</li>
+                    <li><strong>Administración y Mantenimiento de Bases de Datos:</strong> Proporcionamos servicios de instalación, configuración y administración de sistemas de gestión de bases de datos relacionales, incluyendo tareas de copias de seguridad, restauraciones y optimización de rendimiento.</li>
+                    <li><strong>Integración de Datos:</strong> Desarrollamos soluciones para integrar y migrar datos entre diferentes sistemas y plataformas utilizando herramientas de ETL (Extract, Transform, Load) y técnicas de integración de datos.</li>
+                    <li><strong>Seguridad de Datos:</strong> Implementamos medidas de seguridad robustas en bases de datos SQL para proteger la confidencialidad y la integridad de la información almacenada, incluyendo la configuración de políticas de acceso y auditorías de seguridad.</li>
+                    <li><strong>Análisis y Reporting de Datos:</strong> Desarrollamos informes y análisis de datos utilizando funciones analíticas y herramientas de business intelligence (BI) para extraer información significativa y apoyar la toma de decisiones basadas en datos.</li>
+                </ul>
 
-
-                <h3>¿Qué podemos hacer por ti?</h3>
+                <h3>Enlace de prueba</h3>
                 <ul>
 
                 </ul>
