--- a/Pestañas/Contactanos.html
+++ b/Pestañas/Contactanos.html
@@ -39,8 +39,8 @@
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required><br><br>
             
-            <label for="email">Telefono:</label>
-            <input type="email" id="email" name="email" required><br><br>
+            <label for="telefono">Telefono:</label>
+            <input type="telefono" id="telefono" name="telefono" required><br><br>
 
             <label for="email">Correo electrónico:</label>
             <input type="email" id="email" name="email" required><br><br>
