--- a/Info/java.html
+++ b/Info/java.html
@@ -29,7 +29,7 @@
                 por Sun en SunWorld el 23 de mayo de 19951. En 2009, la empresa Oracle compró la empresa Sun, lo que
                 explica por qué el lenguaje ahora pertenece a Oracle. Aunque sigue siendo muy popular, ha habido un
                 declive gradual en el uso de Java en los últimos años con otros lenguajes que utilizan JVM ganando
-                popularidad.
+                popularidad
             </p>
             <p>
                 Habilidades de Java: Aquí están algunas habilidades importantes que los desarrolladores de Java deben
